<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llcElection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".ElectionActivity">


    <TextView
        android:id="@+id/tvGreetingElection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_election" />

    <TextView
        android:id="@+id/tvStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvStory" />

    <LinearLayout
        android:id="@+id/llcCheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbRaenira"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cbRaeniraTargaryen" />

        <CheckBox
            android:id="@+id/cbAegon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/cbAegonTargaryen" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvInfoEleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/tvInfoEleccion" />

    <Button
        android:id="@+id/bttnHincarRodilla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bttnHincarRodilla" />
</androidx.appcompat.widget.LinearLayoutCompat>